[package]
name = "ibmcloud-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server wrapping the IBM Cloud CLI -- 86 tools for auth, resources, Cloud Foundry, Kubernetes, container registry, IAM, catalog, billing"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
